[workspace]
members = ["parser", "interpreter", "ast", "aeg"]
resolver = "2"

# These modules are automatically included in eg `cargo doc` and `cargo test` instead of having to pass --workspace
default-members = ["parser", "interpreter", "ast", "aeg"]

[package]
name = "toy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
interpreter = { path = "interpreter" }
parser = { path = "parser" }
