[package]
name = "aeg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
petgraph = "0.6.5"
serde = { version = "1.0.203", features = ["derive"], optional = true }
indexmap = "2.2.6"
itertools = "*"

[dev-dependencies]
parser = { path = "../parser" }

[features]
serde = ["dep:serde", "petgraph/serde-1"]
